added flag to enable/disable app features
added flag to enable/disable app features

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,11 @@
 SITES = 
 
+#### enable app features
+APP_FEATURE_CRAWL_SITEMAP=true
+APP_FEATURE_DOWNLOAD_IMGS=true
+APP_FEATURE_UPLOAD_IMGS=true
+APP_FEATURE_TRANSLATE=true
+
 #### css
 CSS_QUERY_SKU=body > div.page-wrap > section > div.content-main--inner > div.content--wrapper > div.content.product--details > header > div > ul > li.base-info--entry.entry--sku > span
 CSS_QUERY_NAME=body > div.page-wrap > section > div.content-main--inner > div.content--wrapper > div.content.product--details > header > div > h1
