refactor cats method added csts: DEFAULT_IMG, CATEGORY_ID_START_NO updated pom dependency

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -35,6 +35,8 @@ SPLIT_PROD_EXPORT_FILE=3998
 PARENT_HOME_CATEGORY_NAME=Home
 OTHERS_DEFAULT_CATEGORY_NAME=Others
 QUANTITY_STOCK=1000
+DEFAULT_IMG=default.jpg
+CATEGORY_ID_START_NO=1000
 
 
 #### ftp
