--- a/pom.xml
+++ b/pom.xml
@@ -125,5 +125,11 @@
             <version>3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
+
     </dependencies>
 </project>
